--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="course.html">COURSES</a></li>
                     <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" aria-hidden="true" onclick="showMenu()"></i>
